--- a/fly.toml
+++ b/fly.toml
@@ -1,5 +1,10 @@
-app = "fly-log-shipper-example"
+app = "jelly-logshipper"
+primary_region = "iad"
 
 [metrics]
   port = 9598
   path = "/metrics"
+
+[[services]]
+  http_checks = []
+  internal_port = 8686
